[package]
authors = ["Brian Chin <brian.chin@gmail.com>"]
edition = "2018"
name = "bongo"
version = "0.1.0"
[dependencies]
thiserror = "1.0"
anyhow = "1.0.18"
unicode-segmentation = "^1.2.1"

[dependencies.codefmt]
path = "../codefmt"

[dependencies.bongo_helper_derive]
path = "../bongo_helper_derive"
